--- a/apps/client/src/styles/Sidebar.css
+++ b/apps/client/src/styles/Sidebar.css
@@ -1,7 +1,8 @@
 div.sidebar {
   position: absolute;
-  top: 3rem;
+  top: 0;
   right: 0;
+  z-index: 1;
   width: 6.5rem;
   border-radius: 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.125) -3px 3px 3px 0px, papayawhip 3px -3px 0px 0px;
@@ -9,8 +10,11 @@ div.sidebar {
   width: 12rem;
   
   &>div.wrapper {
-
-    /* padding: 0.5rem; */
+    >.close {
+      position: absolute;
+      top: 0.75rem;
+      right: 0.75rem;
+    }
     &>ul {
       display: flex;
       flex-direction: column;
