--- a/apps/client/src/styles/LoanModal.css
+++ b/apps/client/src/styles/LoanModal.css
@@ -10,15 +10,25 @@ div.loan-modal {
   align-items: center;
   
   >div.loan-wrapper {
+    position: relative;
     background-color: #ffe5bc;
     width: fit-content;
-    padding: 1rem 2rem;
+    padding: 2rem;
     border-radius: 0.5rem;
     box-shadow: rgba(0, 0, 0, 0.1) -3px 3px 3px 0, rgba(0, 0, 0, 0.1) 3px -3px 3px 0;
     
     display: flex;
     flex-direction: column;
     gap: 0.5rem 0;
+    
+    >button {
+      position: absolute;
+      top: 0.25rem;
+      right: 0.25rem;
+      border: none;
+      background-color: transparent;
+      
+    }
     
     >div {
       line-height: 2;
@@ -61,7 +71,8 @@ div.loan-modal {
         >form {
           display: flex;
           align-items: center;
-          gap: 0 0.25rem;
+          gap: 0 0.5rem;
+          margin-top: 0.25rem;
           
           >button {
             padding: 0.3rem 0.6rem;
@@ -78,7 +89,7 @@ div.loan-modal {
             border-radius: 50%;
             
             &.pending {
-              background-color: gray;
+              background-color: darkgray;
             }
             
             &.active {
@@ -101,13 +112,6 @@ div.loan-modal {
               opacity: 0;
             }
           }
-        }
-        
-        >button {
-          padding: 0.3rem 0.6rem;
-          border: none;
-          border-radius: 0.25rem;
-          box-shadow: rgba(0, 0, 0, 0.1) -3px 3px 3px;
         }
       }
     }
