--- a/apps/client/src/styles/Loans.css
+++ b/apps/client/src/styles/Loans.css
@@ -42,8 +42,8 @@ div.loan-summary {
     >table {
       display: flex;
       flex-direction: column;
-      border: 2px solid darkslateblue;
-      border-radius: 0.25rem;
+      border: 2px solid teal;
+      border-radius: 0 0.25rem 0.25rem 0.25rem;
       
       tr {
         display: grid;
@@ -54,7 +54,7 @@ div.loan-summary {
       thead {
         background-color: #ffe5bc;
         color: darkslateblue;
-        border-bottom: 1px solid darkslateblue;
+        border-bottom: 1px solid teal;
       }
       
       tbody>tr {
@@ -65,6 +65,15 @@ div.loan-summary {
         &:not(&:last-child) {
           border-bottom: 1px solid lightgray;
         }
+        
+        >td:nth-child(2),
+        >td:last-child {
+          text-align: right;
+        }
+        
+        >td:nth-child(3) {
+          text-align: center;
+        }
       }
       
       th,
@@ -72,7 +81,7 @@ div.loan-summary {
         text-align: left;
         padding: 0.5rem 0.25rem;
         font-size: 0.75rem;
-        overflow-x: scroll;
+        overflow-x: hidden;
         white-space: nowrap;
         
         &:not(&:last-child) {
@@ -176,7 +185,7 @@ div.loan-apply {
           
           &:has(input:focus) {
             border-bottom-left-radius: 0.25rem !important;
-
+            
             >label {
               color: darkorange;
               background-color: transparent !important;
